fixed blog post meta image for 1x1 aspect, removed some global override font by author-rows

--- a/blocks/author-rows/author-rows.css
+++ b/blocks/author-rows/author-rows.css
@@ -4,7 +4,7 @@
     padding: 2rem 0;
   }
 
-.author-rows-container h2 {
+.author-rows-container .author-rows h2 {
     font-family: var(--heading-font-family);
     font-size: 2.25rem;
     font-weight: 700;
@@ -97,7 +97,7 @@
       max-width: 300px;
       margin: 0 auto;
     }
-    .author-rows-container h2 {
+    .author-rows-container .author-rows h2 {
       font-size: 2rem;
       text-align: center;
     }
