--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -31,7 +31,7 @@
       font-weight: 600;
       line-height: 1.25;
       margin: 0;
-      padding: 8px 16px 6px;
+      padding: 10px 16px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -97,6 +97,7 @@
     padding: 2rem;
     background-color: var(--background-color-2);
     border-radius: var(--border-radius);
+    border: 2px solid #406e0c66;
     margin-top: 0;
     box-shadow: var(--shadow-xl);
     overflow: visible;
@@ -112,6 +113,7 @@
   .tabs-list {
     button {
       position: relative;
+      border: 1px solid #406e0c66;
       
       &:after {
         content: '';
