--- a/blocks/image-gallery/image-gallery.css
+++ b/blocks/image-gallery/image-gallery.css
@@ -23,6 +23,7 @@ main .image-gallery-wrapper {
 .image-gallery-item {
   display: flex;
   flex-direction: column;
+  align-self: center;
 }
 
 .image-gallery-item picture {
@@ -43,7 +44,7 @@ main .image-gallery-wrapper {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0);
-  transition: background 0.3s ease;
+  transition: background 0.3s ease-in-out;
   pointer-events: none;
 }
 
@@ -59,7 +60,7 @@ main .image-gallery-wrapper {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transition: transform 0.3s ease, opacity 0.3s ease !important;
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out !important;
 }
 
 .image-gallery.block .image-gallery-item picture:hover img {
@@ -86,7 +87,7 @@ main .image-gallery-wrapper {
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   word-wrap: break-word;
   position: relative;
-  transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 0.3s ease-in-out;
 }
 
 .image-gallery-item:hover .image-gallery-caption {
@@ -106,7 +107,7 @@ main .image-gallery-wrapper {
   align-items: center;
   z-index: 1000;
   opacity: 0;
-  transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .lightbox.active {
@@ -128,7 +129,7 @@ main .image-gallery-wrapper {
   object-fit: contain;
   border-radius: 8px 8px 0 0;
   align-self: center;
-  transition: opacity 0.2s ease;
+  transition: opacity 0.2s ease-in-out;
 }
 
 .lightbox-caption {
@@ -152,7 +153,7 @@ main .image-gallery-wrapper {
   text-align: center;
   box-sizing: border-box;
   align-self: center;
-  transition: opacity 0.2s ease;
+  transition: opacity 0.2s ease-in-out;
 }
 
 .lightbox-content img:only-child {
