--- a/blocks/anchor-menu/anchor-menu.css
+++ b/blocks/anchor-menu/anchor-menu.css
@@ -4,16 +4,17 @@
 
 .anchor-menu-container {
   position: fixed;
-  left: 20px;
+  left: 0;
   top: 120px;
   max-height: calc(100vh - 140px);
-  width: 200px;
+  width: 180px;
   z-index: 100;
   display: none;
+  padding: 0 10px;
 }
 
 /* Only show on larger screens */
-@media (min-width: 1400px) {
+@media (min-width: 1600px) {
   .anchor-menu-container {
     display: block;
   }
