--- a/blocks/anchor-menu/anchor-menu.css
+++ b/blocks/anchor-menu/anchor-menu.css
@@ -3,13 +3,14 @@
   /* The block itself is just a container, no display needed */
 }
 
+
 .anchor-menu-sidebar {
-  position: sticky;
+  position: fixed;
   top: 80px;
   left: 0;
   height: calc(100vh - 100px);
   width: 220px;
-  z-index: 50;
+  z-index: 9999;
   padding: 20px 10px 20px 0;
   background-color: var(--background-color);
   border-right: 1px solid var(--overlay-background-color);
@@ -18,6 +19,7 @@
   min-height: 300px;
   max-height: calc(100vh - 100px);
   display: block;
+  pointer-events: auto;
 }
 
 @media (max-width: 1399px) {
